--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL= 'postgresql://neondb_owner:npg_XcefUiF7tQM8@ep-sparkling-firefly-ahc5spib-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
-PORT=3000
+DATABASE_URL= 'postgresql://neondb_owner:npg_XcefUiF7tQM8@ep-sparkling-firefly-ahc5spib-pooler.c-3.us-east-1.aws.neon.tech/cancerdb?sslmode=require&channel_binding=require'
+PORT = 3000
